[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-exec-api"
version = "1.0.0"
description = "Sandboxed Python execution API for AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "RestrictedPython>=7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["code_exec_api*"]
