[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "code-exec-api"
version = "2.1.0"
description = "Multi-language sandboxed code execution API (Python + JavaScript) with stateful sessions for AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "RestrictedPython>=7.1",
    "click>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
codeexec = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["code_exec_api*"]
